# esashika-art-catalogue

./: manage.py  pyproject.toml
EsashikaArtCatalogue/: asgi.py  settings.py  urls.py  wsgi.py
catalogue/: admin.py  models.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_rename_opus_opuses.py  0003_rename_opuses_opus.py  0004_auto_20210520_0422.py
catalogue/templates/catalogue/: base.html  common_head.frag.html  detail.html  index.html
