[tool.poetry]
name = "esashika-art-catalogue"
version = "0.1.0"
description = ""
authors = ["ESASHIKA Kaoru <kaoru@esashika.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
Pillow = "^8.2.0"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
